--- a/nginx/default.conf.j2
+++ b/nginx/default.conf.j2
@@ -4,17 +4,20 @@ server {
     server_name _;
 
     {% if NGINX_ENABLE_SSL|default('false') == 'true' %}
-      listen {{ NGINX_HTTPS_PORT|default('443') }} ssl;
+      listen {{ NGINX_HTTPS_PORT|default('443') }} ssl http2;
+      listen [::]:{{ NGINX_HTTPS_PORT|default('443') }} ssl http2;
 
+      ssl_dhparam  /etc/nginx/ssl/dhparam.pem;
       ssl_session_cache  builtin:1000  shared:SSL:10m;
-      ssl_protocols  TLSv1 TLSv1.1 TLSv1.2;
-      ssl_ciphers HIGH:!aNULL:!eNULL:!EXPORT:!CAMELLIA:!DES:!MD5:!PSK:!RC4;
+      ssl_protocols TLSv1 TLSv1.1 TLSv1.2;
+      ssl_ciphers 'EECDH+AESGCM:EDH+AESGCM:AES256+EECDH:AES256+EDH';
       ssl_prefer_server_ciphers on;
 
-      ssl_certificate {{ NGINX_SSL_CERT|default('/etc/nginx/imported/certs/self-signed.crt') }};
-      ssl_certificate_key {{ NGINX_SSL_CERT_KEY|default('/etc/nginx/imported/certs/self-signed.key') }};
+      ssl_certificate {{ NGINX_SSL_CERT|default('/etc/nginx/ssl/self-signed.crt') }};
+      ssl_certificate_key {{ NGINX_SSL_CERT_KEY|default('/etc/nginx/ssl/self-signed.key') }};
     {% else %}
       listen {{ NGINX_HTTP_PORT|default('80') }};
+      listen [::]:{{ NGINX_HTTP_PORT|default('80') }};
     {% endif %}
 
     port_in_redirect {{ NGINX_PORT_IN_REDIRECT|default('on') }};
