--- a/nginx/default.conf.j2
+++ b/nginx/default.conf.j2
@@ -102,6 +102,8 @@ server {
         include fastcgi_params;
         fastcgi_index index.php;
         fastcgi_param SCRIPT_FILENAME $document_root$fastcgi_script_name;
+        fastcgi_param PATH_INFO $fastcgi_path_info;
+        fastcgi_param PATH_TRANSLATED $document_root$fastcgi_path_info;
         fastcgi_pass 127.0.0.1:9000;
     }
 
