--- a/nginx/default.conf.j2
+++ b/nginx/default.conf.j2
@@ -98,6 +98,7 @@ server {
     {% endif %}
 
     location ~ \.php$ {
+        try_files $uri =404;
         fastcgi_split_path_info ^(.+\.php)(/.+)$;
         include fastcgi_params;
         fastcgi_index index.php;
