--- a/nginx/default.conf.j2
+++ b/nginx/default.conf.j2
@@ -69,7 +69,7 @@ server {
         # Remove index.php from URL
         rewrite ^(/index\.php)(.*) $2 permanent;
 
-        try_files $uri $uri/ {{ NGINX_LOCATION|default('/') }}index.php?$query_string;
+        try_files $uri $uri/ {{ NGINX_LOCATION|default('/') }}index.php;
 
         {% if NGINX_ENABLE_AUTH|default('true') == 'true' %}
             satisfy any;
