Add support for configuring nginx’s absolute_redirect directive with ENV vars.

--- a/nginx/default.conf.j2
+++ b/nginx/default.conf.j2
@@ -35,6 +35,7 @@ server {
     {% endif %}
 
     port_in_redirect {{ NGINX_PORT_IN_REDIRECT|default('on') }};
+    absolute_redirect {{ NGINX_ABSOLUTE_REDIRECT|default('on') }};
 
     root /var/www/html;
 
