--- a/nginx/default.conf.j2
+++ b/nginx/default.conf.j2
@@ -2,7 +2,8 @@ include /etc/nginx/imported/partials/before/*;
 
 {% if NGINX_ENABLE_SSL|default('false') == 'true' %}
     server {
-        server_name _;
+        server_name {{ NGINX_SERVER_NAME|default('_') }};
+
         listen {{ NGINX_HTTP_PORT|default('80') }};
         listen [::]:{{ NGINX_HTTP_PORT|default('80') }};
 
@@ -14,8 +15,70 @@ include /etc/nginx/imported/partials/before/*;
     }
 {% endif %}
 
+{% if NGINX_SERVER_NAME|default('_') != '_' %}
+    server {
+        {% if NGINX_ENABLE_SSL|default('false') == 'true' %}
+          listen {{ NGINX_HTTPS_PORT|default('443') }} ssl http2 default_server;
+          listen [::]:{{ NGINX_HTTPS_PORT|default('443') }} ssl http2 default_server;
+
+          ssl_dhparam  /etc/nginx/ssl/dhparam.pem;
+          ssl_session_cache  builtin:1000  shared:SSL:10m;
+          ssl_protocols TLSv1 TLSv1.1 TLSv1.2;
+          ssl_ciphers 'EECDH+AESGCM:EDH+AESGCM:AES256+EECDH:AES256+EDH';
+          ssl_prefer_server_ciphers on;
+
+          ssl_certificate {{ NGINX_SSL_CERT|default('/etc/nginx/ssl/self-signed.crt') }};
+          ssl_certificate_key {{ NGINX_SSL_CERT_KEY|default('/etc/nginx/ssl/self-signed.key') }};
+        {% else %}
+          listen {{ NGINX_HTTP_PORT|default('80') }} default_server;
+          listen [::]:{{ NGINX_HTTP_PORT|default('80') }} default_server;
+        {% endif %}
+
+        return 444;
+    }
+
+    {% set non_canonical = NGINX_NON_CANONICAL|default('') %}
+    {% if non_canonical %}
+        {% for hostname in non_canonical.split(',') %}
+            server {
+                server_name {{ hostname }};
+
+                listen {{ NGINX_HTTP_PORT|default('80') }};
+                listen [::]:{{ NGINX_HTTP_PORT|default('80') }};
+
+                {% if NGINX_ENABLE_SSL|default('false') == 'true' %}
+                    return 301 {{ NGINX_CANONICAL_SCHEME|default('https') }}://{{ NGINX_SERVER_NAME }}$request_uri;
+                {% else %}
+                    return 301 {{ NGINX_CANONICAL_SCHEME|default('http') }}://{{ NGINX_SERVER_NAME }}$request_uri;
+                {% endif %}
+            }
+
+            {% if NGINX_ENABLE_SSL|default('false') == 'true' %}
+                server {
+                    server_name {{ hostname }};
+
+                    listen {{ NGINX_HTTPS_PORT|default('443') }} ssl http2;
+                    listen [::]:{{ NGINX_HTTPS_PORT|default('443') }} ssl http2;
+
+                    ssl_dhparam  /etc/nginx/ssl/dhparam.pem;
+                    ssl_session_cache  builtin:1000  shared:SSL:10m;
+                    ssl_protocols TLSv1 TLSv1.1 TLSv1.2;
+                    ssl_ciphers 'EECDH+AESGCM:EDH+AESGCM:AES256+EECDH:AES256+EDH';
+                    ssl_prefer_server_ciphers on;
+
+                    ssl_certificate {{ NGINX_SSL_CERT|default('/etc/nginx/ssl/self-signed.crt') }};
+                    ssl_certificate_key {{ NGINX_SSL_CERT_KEY|default('/etc/nginx/ssl/self-signed.key') }};
+
+                    return 301 https://{{ NGINX_SERVER_NAME }}$request_uri;
+                }
+            {% endif %}
+        {% endfor %}
+    {% endif %}
+
+{% endif %}
+
 server {
-    server_name _;
+    server_name {{ NGINX_SERVER_NAME|default('_') }};
 
     {% if NGINX_ENABLE_SSL|default('false') == 'true' %}
       listen {{ NGINX_HTTPS_PORT|default('443') }} ssl http2;
