Fix issue where missing query string caused some applications to fail.

--- a/nginx/default.conf.j2
+++ b/nginx/default.conf.j2
@@ -133,7 +133,7 @@ server {
         # Remove index.php from URL
         rewrite ^(/index\.php)(.*) $2 permanent;
 
-        try_files $uri $uri/ {{ NGINX_LOCATION|default('/') }}index.php;
+        try_files $uri $uri/ {{ NGINX_LOCATION|default('/') }}index.php?$query_string;
 
         {% if NGINX_ENABLE_AUTH|default('true') == 'true' %}
             satisfy any;
