--- a/nginx/default.conf.j2
+++ b/nginx/default.conf.j2
@@ -1,5 +1,9 @@
 include /etc/nginx/imported/partials/before/*;
 
+{% if NGINX_ENABLE_FASTCGI_CACHE|default('false') == 'true' %}
+    fastcgi_cache_path /etc/nginx/cache levels=1:2 keys_zone=APPCACHE:100m inactive={{ NGINX_CACHE_TTL|default('10m') }};
+{% endif %}
+
 {% if NGINX_ENABLE_SSL|default('false') == 'true' %}
     server {
         server_name {{ NGINX_SERVER_NAME|default('_') }};
@@ -115,6 +119,25 @@ server {
         return 301 /;
     }
 
+    {% if NGINX_ENABLE_FASTCGI_CACHE|default('false') == 'true' %}
+        set $no_cache 0;
+
+        # php-fpm configuration for non-cached content
+        location @phpfpm_nocache {
+          fastcgi_split_path_info ^(.+\.php)(/.+)$;
+          include fastcgi_params;
+          fastcgi_index index.php;
+          fastcgi_param HTTP_PROXY "";
+          fastcgi_param PATH_INFO $query_string;
+          fastcgi_param SCRIPT_FILENAME $document_root/index.php;
+          fastcgi_pass 127.0.0.1:9000;
+
+          # No FastCGI Cache
+          fastcgi_cache_bypass 1;
+          fastcgi_no_cache 1;
+        }
+    {% endif %}
+
     include /etc/nginx/imported/partials/server/*;
 
     {% if NGINX_TRAILING_SLASH|default('') == 'ensure' %}
@@ -166,8 +189,24 @@ server {
         fastcgi_split_path_info ^(.+\.php)(/.+)$;
         include fastcgi_params;
         fastcgi_index index.php;
+        fastcgi_param HTTP_PROXY "";
         fastcgi_param SCRIPT_FILENAME $document_root$fastcgi_script_name;
         fastcgi_pass 127.0.0.1:9000;
+
+        {% if NGINX_ENABLE_FASTCGI_CACHE|default('false') == 'true' %}
+            # FastCGI Cache settings
+            add_header X-Cache $upstream_cache_status;
+            fastcgi_cache_bypass $no_cache;
+            fastcgi_no_cache $no_cache;
+            fastcgi_cache_key "$scheme$request_method$host$request_uri";
+            fastcgi_cache_methods GET HEAD;
+            fastcgi_ignore_headers Cache-Control Expires Set-Cookie;
+            fastcgi_cache APPCACHE;
+            fastcgi_hide_header Set-Cookie;
+            fastcgi_cache_valid 200 {{ NGINX_CACHE_TTL|default('10m') }};
+            fastcgi_cache_lock on;
+            fastcgi_cache_use_stale updating error timeout invalid_header http_500;
+        {% endif %}
     }
 
     location ~ /\.ht {
