--- a/nginx/default.conf.j2
+++ b/nginx/default.conf.j2
@@ -128,8 +128,8 @@ server {
           include fastcgi_params;
           fastcgi_index index.php;
           fastcgi_param HTTP_PROXY "";
-          fastcgi_param PATH_INFO $query_string;
           fastcgi_param SCRIPT_FILENAME $document_root/index.php;
+          fastcgi_param PATH_INFO $query_string;
           fastcgi_pass 127.0.0.1:9000;
 
           # No FastCGI Cache
@@ -191,6 +191,7 @@ server {
         fastcgi_index index.php;
         fastcgi_param HTTP_PROXY "";
         fastcgi_param SCRIPT_FILENAME $document_root$fastcgi_script_name;
+        fastcgi_param PATH_INFO $fastcgi_path_info;
         fastcgi_pass 127.0.0.1:9000;
 
         {% if NGINX_ENABLE_FASTCGI_CACHE|default('false') == 'true' %}
